<resources>
    <string name="app_name">Ranger</string>
    <string name="loading">Loading…</string>
    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="signed_out">Signed Out</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>

    <string name="action_sign_out">Sign Out</string>
    <string name="action_edit">Edit</string>
    <string name="action_done">Done</string>

    <string name="hint_name">Name</string>
    <string name="save">Save</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="location_format_string">%1$s, %2$s</string>

    <string name="error_required">Required.</string>
    <string name="remember_id_swtich">Remember Email</string>

</resources>
